[package]
name = "starship"
version = "0.1.1-dev"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-sdk = "0.3.4"
ini = "1.3.0"
memory-rs = "0.2.6"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
